--- a/app/views/experiments/index.html.erb
+++ b/app/views/experiments/index.html.erb
@@ -9,26 +9,27 @@
 		<h4>Experimental Variables</h4>
 
 			<p>Below are the variables that have the largest affect on the brew, and therefore we will use these to help define our experimental parameters.</p>
-
-		<%= image_tag "background-variables-coffee-experiments.png" %>
-		<div>
+<div class=grid>
+		<div style="width:390px; height:200px; top:70px; left:31px; position: absolute">
 			<h5>Bean Ratio</h5>
-			<p>The more coffee you use and less water, the stronger the resulting cup. We define the amount of coffee to use as a ratio by weight, as different brewing methods make different amounts of coffee.</p>
+			<p class=grid>The more coffee you use and less water, the stronger the resulting cup. We define the amount of coffee to use as a ratio by weight, as different brewing methods make different amounts of coffee.</p>
 		</div>
-		<div>
-			<h5>Time</h5>
-			<p>Depending on how long you leave your coffee immersed in water will determine the flavours and oils that will be extracted from the bean. This is often broken into two phases: bloom time and immersion time. Bloom time is used to remove unwanted gasses from the coffee, and immersion time is used to extract desired flavours.</P>
-		<div>
-			<h5>Grind</h5>
-			<p>The surface area the ground has exposed to the water is determined by the grind. The finer the ground the more surface area. How finely your beans have been ground affects the taste in subtle ways.  In some methods too fine a grind will lead to gritty coffee, in others too coarse a grind will lead to a bland cup of coffee.</p>
+		<div style="width:340px; height:200px; top:14px; left:440px; position: absolute">
+			<p class=grid>Depending on how long you leave your coffee immersed in water will determine the flavours and oils that will be extracted from the bean. This is often broken into two phases: bloom time and immersion time. Bloom time is used to remove unwanted gasses from the coffee, and immersion time is used to extract desired flavours.</P>
+			<h5 style="position:relative; left: 80px">Time</h5>
 		</div>
-		<div>
-			<h5>Temperature</h5>
-			<p>Not only does the temperature at brew time change which oils are extracted from the coffee, the temperature at drinking time changes your perception of the flavour. Often you can't fully appreciate a coffee until it has cooled a little.</p>
+		<div style="width:310px; height:300px; top:282px; left:60px; position: absolute">
+			<p class=grid>The surface area the ground has exposed to the water is determined by the grind. The finer the ground the more surface area. How finely your beans have been ground affects the taste in subtle ways.  In some methods too fine a grind will lead to gritty coffee, in others too coarse a grind will lead to a bland cup of coffee.</p>
+			<h5 style="position:relative; left: 35px; margin-top: 7px">Grind</h5>
 		</div>
-		<div>
-			<h5>Bean & Grind</h5>
-			<p>The most subjective of all variables is of course the underlying bean. Each varietal and growing region supplies its own character. The character is then enhanced by the roasting process, and subsequent storage of the beans. For each of our sets of experiments we used beans from the same bag, about a week after roasting, to let us concentrate on the finer differences introduced by the brewing methods.</p>
+		<div style="width:364px; height:200px; top:318px; left:378px; position: absolute">
+			<h5 style="position:relative; right: 37px">Temperature</h5>
+			<p class=grid>Not only does the temperature at brew time change which oils are extracted from the coffee, the temperature at drinking time changes your perception of the flavour. Often you can't fully appreciate a coffee until it has cooled a little.</p>
+		</div>
+		<div style="width:720px; height:400px; top:616px; left:40px; position: absolute">
+			<p class=grid>The most subjective of all variables is of course the underlying bean. Each varietal and growing region supplies its own character. The character is then enhanced by the roasting process, and subsequent storage of the beans. For each of our sets of experiments we used beans from the same bag, about a week after roasting, to let us concentrate on the finer differences introduced by the brewing methods.</p>
+			<h5 style="position:relative; margin-top: 3px">Bean & Roast</h5>
+		</div>
 		</div>
 	</div>
 </div>
