--- a/app/views/methods/aeropress.html.erb
+++ b/app/views/methods/aeropress.html.erb
@@ -1,8 +1,71 @@
 <h2>Brew Method: Aeropress</h2>
+<div>
+    <div  class=brewimage>
+        <%= image_tag "coffee-experiments-aeropress.png",:width => "100px" %>
+    </div>
+  <p>
+  	Latte macchiato roast as sit organic, barista lungo plunger pot ristretto, coffee dark id and, doppio iced chicory mazagran, coffee crema pumpkin spice affogato crema grounds. Cup filter decaffeinated breve, frappuccino mug brewed. 
+  </p>
+</div>
 
-<p>
-	Thhre are MANY differnt ways to make an Aeropress
-	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.  
-</p>
+<h3>Table 1: Comparison of Brew Method Variables for French Press</h3>
+	<div>
+      <table>
+        <tr> 
+	      <th>Source</th>
+	      <th>Bean:H2O</th>
+	      <th>Time</th>
+	      <th>Grind</th>
+	      <th>Temp</th>
+	      <th>Bean</th>
+        </tr>
 
-<h3>Table 1: Comparison of Brew Method Variables for Aeropress!!</h3>
+        <tr> 
+          <td>Blue Bottle</td>
+          <td>1:10</td>
+      	  <td>30s Bloom, 4min</td>
+      	  <td>Coarse</td>
+      	  <td>Boil</td>
+      	  <td>fruity, heavy, creamy</td>
+        </tr>
+
+        <tr> 
+          <td>Stumptown</td>
+          <td>1:16</td>
+      	  <td>4min</td>
+      	  <td>Coarse</td>
+      	  <td>Just to a boil</td>
+      	  <td>n/a</td>
+        </tr>
+
+        <tr> 
+          <td>Ritual Coffee</td>
+          <td>1:16</td>
+      	  <td>4min</td>
+      	  <td>Medium</td>
+      	  <td>96°C</td>
+      	  <td>TBD</td>
+        </tr>
+
+        <tr> 
+          <td>Sight Glass</td>
+          <td>1:14</td>
+      	  <td>30sec, Stir, 3:30min</td>
+      	  <td>Coarser</td>
+      	  <td>Boil, let cool a few min</td>
+      	  <td>TBD</td>
+        </tr>
+
+        <tr> 
+          <td>Verve</td>
+          <td>1:11</td>
+      	  <td>30sec, Stir, 3min</td>
+      	  <td>Coarse</td>
+      	  <td>90°-96°C</td>
+      	  <td>TBD</td>
+        </tr>
+
+      </table>
+    </div>
+    
+
