--- a/app/views/methods/clever.html.erb
+++ b/app/views/methods/clever.html.erb
@@ -1,7 +1,71 @@
-<h2>Brew Method: French Press</h2>
+<h2>Brew Method: Clever</h2>
+<div>
+    <div  class=brewimage>
+        <%= image_tag "coffee-experiments-clever.png",:width => "100px" %>
+    </div>
+  <p>
+  	To get back some of the fullness of taste of a Cafetière while still retaining some of the delicate flavours exposed by a pour-over you can use the Clever. The gadget, highly deserving of its name, combines the full immersion method with the filtering through a paper filter resulting in a pleasant balance of a rich body without getting overwhelmed by the grind texture.  
+  </p>
+</div>
 
-<p>
-	Clever, you think you are so clever...  
-</p>
+<h3>Table 1: Comparison of Brew Method Variables for French Press</h3>
+	<div>
+      <table>
+        <tr> 
+	      <th>Source</th>
+	      <th>Bean:H2O</th>
+	      <th>Time</th>
+	      <th>Grind</th>
+	      <th>Temp</th>
+	      <th>Bean</th>
+        </tr>
 
-<h3>Table 1: Comparison of Brew Method Variables for the Clever</h3>
+        <tr> 
+          <td>Blue Bottle</td>
+          <td>1:10</td>
+      	  <td>30s Bloom, 4min</td>
+      	  <td>Coarse</td>
+      	  <td>Boil</td>
+      	  <td>fruity, heavy, creamy</td>
+        </tr>
+
+        <tr> 
+          <td>Stumptown</td>
+          <td>1:16</td>
+      	  <td>4min</td>
+      	  <td>Coarse</td>
+      	  <td>Just to a boil</td>
+      	  <td>n/a</td>
+        </tr>
+
+        <tr> 
+          <td>Ritual Coffee</td>
+          <td>1:16</td>
+      	  <td>4min</td>
+      	  <td>Medium</td>
+      	  <td>96°C</td>
+      	  <td>TBD</td>
+        </tr>
+
+        <tr> 
+          <td>Sight Glass</td>
+          <td>1:14</td>
+      	  <td>30sec, Stir, 3:30min</td>
+      	  <td>Coarser</td>
+      	  <td>Boil, let cool a few min</td>
+      	  <td>TBD</td>
+        </tr>
+
+        <tr> 
+          <td>Verve</td>
+          <td>1:11</td>
+      	  <td>30sec, Stir, 3min</td>
+      	  <td>Coarse</td>
+      	  <td>90°-96°C</td>
+      	  <td>TBD</td>
+        </tr>
+
+      </table>
+    </div>
+    
+
