--- a/app/views/methods/frenchpress.html.erb
+++ b/app/views/methods/frenchpress.html.erb
@@ -1,7 +1,7 @@
 <h2>Brew Method: French Press</h2>
 <div>
-    <div style="float: left; margin-top: 15px">
-        <%= image_tag "coffee-experiments-press.png",:width => "30%", :height => "30%"%>
+    <div  class=brewimage>
+        <%= image_tag "coffee-experiments-press.png",:width => "100px" %>
     </div>
   <p>
   	The French Press (or Press Pot, Cafetière) is a full immersion, non-filtered brew method. Some key identifiers for this method are: full bodied, heavier mouth-feel, and an oilier finish.  
