--- a/app/views/methods/mokapot.html.erb
+++ b/app/views/methods/mokapot.html.erb
@@ -1,7 +1,71 @@
 <h2>Brew Method: Moka Pot</h2>
-
-<p>
-	MOKA POT: The French Press (or Press Pot, Cafetière) is a full immersion, non-filtered brew method. Some key identifiers for this method are: full bodied, heavier mouth-feel, and an oilier finish.  
-</p>
+<div>
+    <div  class=brewimage>
+        <%= image_tag "coffee-experiments-grinder2.png",:width => "100px" %>
+    </div>
+  <p>
+  	Turkish, cup body extra, aged dark, mazagran caffeine, siphon black crema fair trade skinny organic turkish robust cream ristretto cup strong coffee. So id viennese, whipped cinnamon, as brewed medium, sugar cultivar rich medium at macchiato java. Cup spoon qui irish, kopi-luwak, macchiato grounds. cortado breve coffee organic that black siphon et decaffeinated, acerbic viennese plunger pot mazagran at spoon. Cortado, beans single shot lungo caramelization, variety acerbic wings, beans, lungo rich, crema and froth shop est and redeye mocha crema.  
+  </p>
+</div>
 
 <h3>Table 1: Comparison of Brew Method Variables for French Press</h3>
+	<div>
+      <table>
+        <tr> 
+	      <th>Source</th>
+	      <th>Bean:H2O</th>
+	      <th>Time</th>
+	      <th>Grind</th>
+	      <th>Temp</th>
+	      <th>Bean</th>
+        </tr>
+
+        <tr> 
+          <td>Blue Bottle</td>
+          <td>1:10</td>
+      	  <td>30s Bloom, 4min</td>
+      	  <td>Coarse</td>
+      	  <td>Boil</td>
+      	  <td>fruity, heavy, creamy</td>
+        </tr>
+
+        <tr> 
+          <td>Stumptown</td>
+          <td>1:16</td>
+      	  <td>4min</td>
+      	  <td>Coarse</td>
+      	  <td>Just to a boil</td>
+      	  <td>n/a</td>
+        </tr>
+
+        <tr> 
+          <td>Ritual Coffee</td>
+          <td>1:16</td>
+      	  <td>4min</td>
+      	  <td>Medium</td>
+      	  <td>96°C</td>
+      	  <td>TBD</td>
+        </tr>
+
+        <tr> 
+          <td>Sight Glass</td>
+          <td>1:14</td>
+      	  <td>30sec, Stir, 3:30min</td>
+      	  <td>Coarser</td>
+      	  <td>Boil, let cool a few min</td>
+      	  <td>TBD</td>
+        </tr>
+
+        <tr> 
+          <td>Verve</td>
+          <td>1:11</td>
+      	  <td>30sec, Stir, 3min</td>
+      	  <td>Coarse</td>
+      	  <td>90°-96°C</td>
+      	  <td>TBD</td>
+        </tr>
+
+      </table>
+    </div>
+    
+
