--- a/app/views/methods/pourover.html.erb
+++ b/app/views/methods/pourover.html.erb
@@ -1,7 +1,71 @@
 <h2>Brew Method: Pour Over</h2>
+<div>
+    <div  class=brewimage>
+        <%= image_tag "coffee-experiments-pourover.png",:width => "100px" %>
+    </div>
+  <p>
+  	If the grittiness isn't to your taste, you can use the clasic Pour Over method (Melitta or V60) with a paper filter instead. These tend to require a little more manual work than the Cafetière but the result is often a more detailed and refined taste where the oils and textures are removed, even if it lacks some of the richness. 
+  </p>
+</div>
 
-<p>
-	POUR OVER!!! The French Press (or Press Pot, Cafetière) is a full immersion, non-filtered brew method. Some key identifiers for this method are: full bodied, heavier mouth-feel, and an oilier finish.  
-</p>
+<h3>Table 1: Comparison of Brew Method Variables for French Press</h3>
+	<div>
+      <table>
+        <tr> 
+	      <th>Source</th>
+	      <th>Bean:H2O</th>
+	      <th>Time</th>
+	      <th>Grind</th>
+	      <th>Temp</th>
+	      <th>Bean</th>
+        </tr>
 
-<h3>Table 1: Comparison of Brew Method Variables for Classic Pour Over</h3>
+        <tr> 
+          <td>Blue Bottle</td>
+          <td>1:10</td>
+      	  <td>30s Bloom, 4min</td>
+      	  <td>Coarse</td>
+      	  <td>Boil</td>
+      	  <td>fruity, heavy, creamy</td>
+        </tr>
+
+        <tr> 
+          <td>Stumptown</td>
+          <td>1:16</td>
+      	  <td>4min</td>
+      	  <td>Coarse</td>
+      	  <td>Just to a boil</td>
+      	  <td>n/a</td>
+        </tr>
+
+        <tr> 
+          <td>Ritual Coffee</td>
+          <td>1:16</td>
+      	  <td>4min</td>
+      	  <td>Medium</td>
+      	  <td>96°C</td>
+      	  <td>TBD</td>
+        </tr>
+
+        <tr> 
+          <td>Sight Glass</td>
+          <td>1:14</td>
+      	  <td>30sec, Stir, 3:30min</td>
+      	  <td>Coarser</td>
+      	  <td>Boil, let cool a few min</td>
+      	  <td>TBD</td>
+        </tr>
+
+        <tr> 
+          <td>Verve</td>
+          <td>1:11</td>
+      	  <td>30sec, Stir, 3min</td>
+      	  <td>Coarse</td>
+      	  <td>90°-96°C</td>
+      	  <td>TBD</td>
+        </tr>
+
+      </table>
+    </div>
+    
+
