--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
   <article>
     <div> <%= yield %> </div>
     
-    <footer><div><p class=footer>OThe Coffee Experiments ©2014</p></div>
+    <footer><div><span>The Coffee Experiments ©2014</span></div>
     </footer>
 
   </article>
