--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
                   <li> <a href="<%=methods_pourover_path %>">Pour Over</a></li>
                    <li> <a href="<%=methods_aeropress_path %>">Aeropress</a></li>
                   <li> <a href="<%=methods_mokapot_path %>">Moka Pot</a></li>
+                  <li> <a href="<%=methods_siphon_path %>">Siphon</a></li>
                 </ul>
                 </ul></code>
               </li>
