--- a/app/views/methods/clever.html.erb
+++ b/app/views/methods/clever.html.erb
@@ -1,7 +1,7 @@
 <h2>Brew Method: Clever</h2>
 <div>
     <div  class=brewimage>
-        <%= image_tag "coffee-experiments-clever.png",:width => "100px" %>
+        <%= image_tag "coffee-experiments-clever.png",:style => "width:120px" %>
     </div>
   <p>
   	To get back some of the fullness of taste of a Cafetière while still retaining some of the delicate flavours exposed by a pour-over you can use the Clever. The gadget, highly deserving of its name, combines the full immersion method with the filtering through a paper filter resulting in a pleasant balance of a rich body without getting overwhelmed by the grind texture.  
@@ -69,3 +69,16 @@
     </div>
     
 
+
+<div>
+  <ol  class=instructions>
+    <li> Preheat water and pour into press pot and desired drinking mug to pre-heat </li>
+    <li> Measure and grind beans </li>
+    <li> Remove pre-heat water from vessel and place grounds inside </li>
+    <li> Tare vessel with beans on a scale. Pour enough water to cover the beans, stir, let bloom. </li>
+    <li> Using the scale to watch, pour the remainder of the water ratio into the vessel and replace lid with plunger, but do not plunge. </li>
+    <li> After immersion time is finished, with control gently press down on plunger over 20 sec. </li>
+    <li> Dispose of pre-heat water from mug and decant brew from press pot. </li>
+    <li> Hold in both hands. Smell. Sip. Admire. </li>
+  </ol>
+</div>
