--- a/app/views/methods/frenchpress.html.erb
+++ b/app/views/methods/frenchpress.html.erb
@@ -1,7 +1,7 @@
 <h2>Brew Method: French Press</h2>
 <div>
     <div  class=brewimage>
-        <%= image_tag "coffee-experiments-press.png",:width => "100px" %>
+        <%= image_tag "coffee-experiments-press.png" %>
     </div>
   <p>
   	The French Press (or Press Pot, Cafetière) is a full immersion, non-filtered brew method. Some key identifiers for this method are: full bodied, heavier mouth-feel, and an oilier finish.  
@@ -9,7 +9,8 @@
 </div>
 
 <h3>Table 1: Comparison of Brew Method Variables for French Press</h3>
-	<div>
+<div class=brewtable>
+	<div style= "padding-top:20px">
       <table>
         <tr> 
 	      <th>Source</th>
@@ -67,5 +68,56 @@
 
       </table>
     </div>
-    
+  </div>
+
+
+<h3>Instructions </h3>
+  <div style="height:100px; margin-top:20px">
+      <div style="float: left">
+        <%= image_tag "coffee-experiments-preheat-water.png",:width => "100px", :style=>"margin-left: 50px; margin-right: 30px"%>
+    </div style="margin-top: 20px">
+
+      <p style="margin-right: 50px">1. Preheat water and pour into press pot and desired drinking vessel to warm.</p>
+  </div>
+
+  <div style="height:100px; margin-top:20px">
+      <div style="float: right">
+        <%= image_tag "coffee-experiments-grind-beans.png",:width => "100px", :style=>"margin-left: 35px; margin-right: 50px"%>
+    </div>
+
+      <p style="margin-left: 50px">2. Measure beans on scale according to bean water ratio and grind beans in burr grinder. *(Remember to remove pre-heat water from vessels before adding coffee)</p>
+  </div>
+
+  <div style="height:100px; margin-top:20px">
+      <div style="float: left">
+        <%= image_tag "coffee-experiments-bloom-press.png",:width => "100px", :style=>"margin-left: 50px; margin-right: 30px"%>
+    </div>
+
+      <p style="margin-right: 50px">3. Tare press pot with beans on a scale. Pour enough water to cover all the beans, stir, and let bloom.</p>
+  </div>
+
+  <div style="height:100px; margin-top: 20px">
+      <div style="float: right">
+        <%= image_tag "coffee-experiments-immersion-press.png",:width => "100px", :style=>"margin-left: 35px; margin-right: 50px"%>
+    </div>
+
+      <p style="margin-left: 50px">4. Using the scale to measure, pour the remaing water ratio into the press pot and replace lid with plunger, but do not plunge.</p>
+  </div>
+
+  <div style="height:100px; margin-top:20px">
+      <div style="float: left">
+        <%= image_tag "coffee-experiments-plunge-press.png",:width => "100px", :style=>"margin-left: 50px; margin-right: 30px"%>
+    </div>
+
+      <p style="margin-right: 50px">5. After immersion time is finished, with control gently press down on plunger over 10-20 sec.</p>
+  </div>
+
+  <div style="height:100px; margin-top:20px">
+      <div style="float: right">
+        <%= image_tag "coffee-experiments-decant-press.png",:width => "100px", :style=>"margin-left: 35px; margin-right: 50px"%>
+    </div>
+
+      <p style="margin-left: 50px">6. Dispose of pre-heat water and decant brew from press pot into warmed vessel.</p>
+  </div>
+</div>
 
