--- a/app/views/methods/mokapot.html.erb
+++ b/app/views/methods/mokapot.html.erb
@@ -1,10 +1,10 @@
 <h2>Brew Method: Moka Pot</h2>
 <div>
     <div  class=brewimage>
-        <%= image_tag "coffee-experiments-grinder2.png",:width => "100px" %>
+        <%= image_tag "coffee-experiments-mokapot-large.png", :style => "width:90px" %>
     </div>
   <p>
-  	Turkish, cup body extra, aged dark, mazagran caffeine, siphon black crema fair trade skinny organic turkish robust cream ristretto cup strong coffee. So id viennese, whipped cinnamon, as brewed medium, sugar cultivar rich medium at macchiato java. Cup spoon qui irish, kopi-luwak, macchiato grounds. cortado breve coffee organic that black siphon et decaffeinated, acerbic viennese plunger pot mazagran at spoon. Cortado, beans single shot lungo caramelization, variety acerbic wings, beans, lungo rich, crema and froth shop est and redeye mocha crema.  
+  	Turkish, cup body extra, aged dark, mazagran caffeine, siphon black crema fair trade skinny organic turkish robust cream ristretto cup strong coffee. So id viennese, whipped cinnamon, as brewedplunger pot mazagran at spoon. Cortado, beans single shot lungo caramelization, variety acerbic wings, beans, lungo rich, crema and froth shop est and redeye mocha crema.  
   </p>
 </div>
 
