--- a/app/views/methods/siphon.html.erb
+++ b/app/views/methods/siphon.html.erb
@@ -1,10 +1,10 @@
-<h2>Brew Method: Aeropress</h2>
+<h2>Brew Method: Siphon</h2>
 <div>
     <div  class=brewimage>
-        <%= image_tag "coffee-experiments-aeropress.png", :style => "width: 80px" %>
+        <%= image_tag "coffee-experiments-siphon.png",:style => "width:120px" %>
     </div>
   <p>
-  	Latte macchiato roast as sit organic, barista lungo plunger pot ristretto, coffee dark id and, doppio iced chicory mazagran, coffee crema pumpkin spice affogato crema grounds. Cup filter decaffeinated breve, frappuccino mug brewed. 
+  	To get back some of the fullness of taste of a Cafetière while still retaining some of the delicate flavours exposed by a pour-over you can use the Clever. The gadget, highly deserving of its name, combines the full immersion method with the filtering through a paper filter resulting in a pleasant balance of a rich body without getting overwhelmed by the grind texture.  
   </p>
 </div>
 
