--- a/app/views/methods/index.html.erb
+++ b/app/views/methods/index.html.erb
@@ -2,50 +2,50 @@
 <p>Below are some descriptions about the various brew methods we investigate in the experiments and the typical ways they affect the taste of the.</p>
 <div>
 	<div>
-	    <div style="float: left; margin-top: 31px">
-	    	<%= image_tag "coffee-experiments-press.png",:width => "40%" %>
+	    <div style="float: left; margin-top: 20px">
+	    	<%= image_tag "coffee-experiments-press.png",:width => "100px", :style=>"margin-left: 45px; margin-right: 40px"%>
 		</div>
 
 	    <p>Perhaps the simplest to understand is the Cafetière (French Press, or Press Pot). You add some coarsely ground coffee beans and some water, let them brew for a few minutes, and then use the metal plunger to seal the grounds in the pot while you pour. The result is a rich, full-bodied cup of coffee, with perhaps a little thickness or grittiness at the bottom if your ground is too fine.</p>
 	</div>
 
 	<div>
-	    <div style="float: right; margin-top: 31px">
-	    	<%= image_tag "coffee-experiments-pourover.png",:width => "50%"%>
+	    <div style="float: right; margin-top: 20px">
+	    	<%= image_tag "coffee-experiments-pourover-large.png",:width => "100px", :style=>"margin-left: 50px; margin-right: 50px"%>
 		</div>
 
 	    <p>If the grittiness isn't to your taste, you can use the clasic Pour Over method (Melitta or V60) with a paper filter instead. These tend to require a little more manual work than the Cafetière but the result is often a more detailed and refined taste where the oils and textures are removed, even if it lacks some of the richness.</p>
 	</div>
 
 	<div>
-	    <div style="float: left;  margin-top: 31px">
-	    	<%= image_tag "coffee-experiments-clever.png",:width => "50%"%>
+	    <div style="float: left;  margin-top: 20px">
+	    	<%= image_tag "coffee-experiments-clever.png",:width => "100px", :style=>"margin-left: 50px; margin-right: 30px"%>
 		</div>
 
 	    <p>To get back some of the fullness of taste of a Cafetière while still retaining some of the delicate flavours exposed by a pour-over you can use the Clever. The gadget, highly deserving of its name, combines the full immersion method with the filtering through a paper filter resulting in a pleasant balance of a rich body without getting overwhelmed by the grind texture.</p>
 	</div>
 
 	<div>
-	    <div style="float: right; margin-top: 31px">
-	    	<%= image_tag "coffee-experiments-aeropress.png",:width => "50%"%>
+	    <div style="float: right; margin-top: 20px">
+	    	<%= image_tag "coffee-experiments-aeropress.png",:width => "100px", :style=>"margin-left: 50px; margin-right: 50px"%>
 		</div>
 
-	    <p>Turkish, cup body extra, aged dark, mazagran caffeine, siphon black crema fair trade skinny organic turkish robust cream ristretto cup strong coffee. So id viennese, whipped cinnamon, as brewed medium, sugar cultivar rich medium at macchiato java. Cup spoon qui irish, kopi-luwak, macchiato grounds. cortado breve coffee organic that black siphon et decaffeinated, acerbic viennese plunger pot mazagran at spoon. Cortado, beans single shot lungo caramelization, variety acerbic wings, beans, lungo rich, crema and froth shop est and redeye mocha crema.</p>
+	    <p>The aeropress is one of the newer additions to the coffee gadget family. Conceived as a way of making an excellent espresso without the need for expensive machinery, it makes an intense coffee that is often dilluted before drinking. Like the Clever it combines the immersion of a french-press with the paper filter of a pour over, but it also requires that you push the water through the beans. This adds an element of pressure which extracts much more flavour in a shorter amount of time.</p>
 	</div>
 
 	<div>
 	    <div style="float: left;">
-	    	<%= image_tag "coffee-experiments-beans-image.png",:width => "50%"%>
+	    	<%= image_tag "coffee-experiments-mokapot-small.png",:width => "100px", :style=>"margin-left: 50px; margin-right: 40px"%>
 		</div>
 
-	    <p>Latte macchiato roast as sit organic, barista lungo plunger pot ristretto, coffee dark id and, doppio iced chicory mazagran, coffee crema pumpkin spice affogato crema grounds. Cup filter decaffeinated breve, frappuccino mug brewed.</p>
+	    <p>Just like the aeropress, the moka pot also makes an espresso-like coffee. Thick intense, and excellent for mixing with water, milk or microfoam to make the perfect drink. The moka pot relies on steam pressure to push water up through the coffee grounds. The coffee then collects at the top, with minimal filtration, leading to thick sedimenty coffee.</p>
 	</div>
 
 	<div>
-	    <div style="float: right; margin-top: 15px">
-	    	<%= image_tag "coffee-experiments-grinder2.png",:width => "50%"%>
+	    <div style="float: right; margin-top: 20px">
+	    	<%= image_tag "coffee-experiments-siphon.png",:width => "100px", :style=>"margin-left: 50px; margin-right: 50px"%>
 		</div>
 
-	    <p>Doppio plunger pot iced blue mountain organic to go a instant to go ut arabica et decaffeinated. Ut id white cultivar bar, as, americano, bar cappuccino milk con panna skinny affogato. Ristretto spoon blue mountain, in, variety, robust as single origin cream siphon caramelization americano sweet roast grinder. Flavour rich beans aftertaste.</p>
+	    <p>If you enjoy doing science, the coffee Siphon is definitely worth playing with. It works in a way that's superficially similar to a moka pot, water is pushed upward from the lower chamber into the upper chamber by increasing temperature and pressure. Once the water is in the upper chamber, the heat is removed and a Clever-like mechanism takes over. The grounds are immersed for a while and coffee is pulled down through the filter as the lower chamber cools.</p>
 	</div>
 </div>
