--- a/app/views/methods/pourover.html.erb
+++ b/app/views/methods/pourover.html.erb
@@ -1,7 +1,7 @@
 <h2>Brew Method: Pour Over</h2>
 <div>
     <div  class=brewimage>
-        <%= image_tag "coffee-experiments-pourover.png",:width => "100px" %>
+        <%= image_tag "coffee-experiments-pourover-V60.png" %>
     </div>
   <p>
   	If the grittiness isn't to your taste, you can use the clasic Pour Over method (Melitta or V60) with a paper filter instead. These tend to require a little more manual work than the Cafetière but the result is often a more detailed and refined taste where the oils and textures are removed, even if it lacks some of the richness. 
