--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -1,2 +1,44 @@
-<h1>The Pintrest of ideas</h1>
-<p>Find me in app/views/ideas/index.html.erb</p>
+<h1>Coffee Creativity</h1>
+
+<div class=ideas style="margin-top:50px; margin-bottom:50px; height: 600px">
+    <div>
+        <%= image_tag "coffee-experiments-masonjar.jpg",:height => "500px"%>
+    </div>
+
+      <p>Mason jars are so versitle. From jams, to grains, to liquids for storage. This transparent vessel lends itself well to enjoying the full color range of the brew.</p>
+</div>
+
+<div class=ideas>
+    <div>
+        <%= image_tag "coffee-experiments-siphon-brewer.jpg",:height => "300px"%>
+        <%= image_tag "coffee-experiments-bluemountain.jpg", :height => "300px"%>
+    </div>
+
+      <p>Siphon brewers in Taiwan with Blue Mountain coffee. A strange place to have this coffee kiosk in the middle of a super mall in Taipei, but good coffee is not dependent on the surroundings.</p>
+</div>
+
+<div class=ideas>
+    <div>
+		<%= image_tag "coffee-experiments-soy-coldbrew.jpg", :height => "300px"%>
+    </div>
+
+      <p>Sightglass coldbrew with soy milk and vanilla looking like a mighty storm abrewing for an afternoon pick me up.</p>
+</div>
+
+<div class=ideas>
+    <div>
+        <%= image_tag "coffee-experiments-hario-grinder-sightglass.jpg",:height => "300px"%>
+        <%= image_tag "coffee-experiments-clever-sightglass.jpg",:height => "300px"%>
+    </div>
+
+      <p>Grind your beans by hand with a hario burr grinder. Sightglass coffee from 7th Street in San Francisco. Brewed in a Clever to bring out the best of full immersion brewing in combination with a paper filter.</p>
+</div>
+
+<div class=ideas>
+    <div>
+		<%= image_tag "coffee-experiments-cup-stumptown.jpg", :height => "300px"%>
+    </div>
+
+      <p>Coffee from Stumptown, in Portland, OR, brings flavors from the northwest. Comparable to San Francisco roasting sytles. And basically you can't go wrong with a bison logo.</p>
+</div>
+
