--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,2 +1,14 @@
-<h1>Do you have a question</h1>
-<p>Find me in app/views/questions/index.html.erb</p>
+<h1>Dear Dr. Bean Letters</h1>
+<div class=letters>
+	<p style="text-align:right">September 17th, 2013</p>
+	<p>Dear Dr. Bean</p>
+	<p>I have been researching coffee brew methods for some time and would like to know if there is actually a difference between all these different brewing methods. I think it is a lot of hype for not a lot of difference.</p>
+	<p>Do you have a suggestion for how best to understand these differences?</p>
+	<p>Sincerly,</p>
+	<p>Mister Brew</p>
+</div>
+
+<div style="margin-top:50px">
+	<%= image_tag "coffee-experiments-inquiryform.png",:height => "350x"%>
+
+</div>
