--- a/app/views/methods/frenchpress.html.erb
+++ b/app/views/methods/frenchpress.html.erb
@@ -8,116 +8,124 @@
   </p>
 </div>
 
-<h3>Table 1: Comparison of Brew Method Variables for French Press</h3>
+<h3>Brew Calculator</h3>
+
+  <div style="padding-top:20px; padding-bottom:30px">
+        <%= image_tag "coffee-experiments-brewcalculator.png"%>
+  </div>
+
+
+
+<h3>Instructions</h3>
+<div>
+  <div class=instructions>
+      <div style="float: left">
+        <%= image_tag "coffee-experiments-preheat-water.png",:width => "100px", :style=>"margin-left: 50px; margin-right: 30px"%>
+    </div>
+
+      <p class=instructionsleft>1. Preheat water and pour into press pot and desired drinking vessel to warm.</p>
+  </div>
+
+  <div class=instructions>
+      <div style="float: right">
+        <%= image_tag "coffee-experiments-grind-beans.png",:width => "100px", :style=>"margin-left: 35px; margin-right: 50px"%>
+    </div>
+
+      <p class=instructionsright>2. Measure beans on scale according to bean water ratio and grind beans in burr grinder. *(Remember to remove pre-heat water from vessels before adding coffee)</p>
+  </div>
+
+  <div class=instructions>
+      <div style="float: left">
+        <%= image_tag "coffee-experiments-bloom-press.png",:width => "100px", :style=>"margin-left: 50px; margin-right: 30px"%>
+    </div>
+
+      <p class=instructionsleft>3. Tare press pot with beans on a scale. Pour enough water to cover all the beans, stir, and let bloom.</p>
+  </div>
+
+  <div class=instructions>
+      <div style="float: right">
+        <%= image_tag "coffee-experiments-immersion-press.png",:width => "100px", :style=>"margin-left: 35px; margin-right: 50px"%>
+    </div>
+
+      <p class=instructionsright>4. Using the scale to measure, pour the remaing water ratio into the press pot and replace lid with plunger, but do not plunge.</p>
+  </div>
+
+  <div class=instructions>
+      <div style="float: left">
+        <%= image_tag "coffee-experiments-plunge-press.png",:width => "100px", :style=>"margin-left: 50px; margin-right: 30px"%>
+    </div>
+
+      <p class=instructionsleft>5. After immersion time is finished, with control gently press down on plunger over 10-20 sec.</p>
+  </div>
+
+  <div class=instructions>
+      <div style="float: right">
+        <%= image_tag "coffee-experiments-decant-press.png",:width => "100px", :style=>"margin-left: 35px; margin-right: 50px"%>
+    </div>
+
+      <p class=instructionsright>6. Dispose of pre-heat water and decant brew from press pot into warmed vessel.</p>
+  </div>
+</div>
+
+<h3>Table 1: Brew Method Variables for French Press</h3>
 <div class=brewtable>
-	<div style= "padding-top:20px">
+  <div style= "padding-top:20px">
       <table>
         <tr> 
-	      <th>Source</th>
-	      <th>Bean:H2O</th>
-	      <th>Time</th>
-	      <th>Grind</th>
-	      <th>Temp</th>
-	      <th>Bean</th>
+        <th>Source</th>
+        <th>Bean:H2O</th>
+        <th>Time</th>
+        <th>Grind</th>
+        <th>Temp</th>
+        <th>Bean</th>
         </tr>
 
         <tr> 
           <td>Blue Bottle</td>
           <td>1:10</td>
-      	  <td>30s Bloom, 4min</td>
-      	  <td>Coarse</td>
-      	  <td>Boil</td>
-      	  <td>fruity, heavy, creamy</td>
+          <td>30s Bloom, 4min</td>
+          <td>Coarse</td>
+          <td>Boil</td>
+          <td>fruity, heavy, creamy</td>
         </tr>
 
         <tr> 
           <td>Stumptown</td>
           <td>1:16</td>
-      	  <td>4min</td>
-      	  <td>Coarse</td>
-      	  <td>Just to a boil</td>
-      	  <td>n/a</td>
+          <td>4min</td>
+          <td>Coarse</td>
+          <td>Just to a boil</td>
+          <td>n/a</td>
         </tr>
 
         <tr> 
           <td>Ritual Coffee</td>
           <td>1:16</td>
-      	  <td>4min</td>
-      	  <td>Medium</td>
-      	  <td>96°C</td>
-      	  <td>TBD</td>
+          <td>4min</td>
+          <td>Medium</td>
+          <td>96°C</td>
+          <td>TBD</td>
         </tr>
 
         <tr> 
           <td>Sight Glass</td>
           <td>1:14</td>
-      	  <td>30sec, Stir, 3:30min</td>
-      	  <td>Coarser</td>
-      	  <td>Boil, let cool a few min</td>
-      	  <td>TBD</td>
+          <td>30sec, Stir, 3:30min</td>
+          <td>Coarser</td>
+          <td>Boil, let cool a few min</td>
+          <td>TBD</td>
         </tr>
 
         <tr> 
           <td>Verve</td>
           <td>1:11</td>
-      	  <td>30sec, Stir, 3min</td>
-      	  <td>Coarse</td>
-      	  <td>90°-96°C</td>
-      	  <td>TBD</td>
+          <td>30sec, Stir, 3min</td>
+          <td>Coarse</td>
+          <td>90°-96°C</td>
+          <td>TBD</td>
         </tr>
 
       </table>
     </div>
   </div>
-
-
-<h3>Instructions </h3>
-  <div style="height:100px; margin-top:20px">
-      <div style="float: left">
-        <%= image_tag "coffee-experiments-preheat-water.png",:width => "100px", :style=>"margin-left: 50px; margin-right: 30px"%>
-    </div style="margin-top: 20px">
-
-      <p style="margin-right: 50px">1. Preheat water and pour into press pot and desired drinking vessel to warm.</p>
-  </div>
-
-  <div style="height:100px; margin-top:20px">
-      <div style="float: right">
-        <%= image_tag "coffee-experiments-grind-beans.png",:width => "100px", :style=>"margin-left: 35px; margin-right: 50px"%>
-    </div>
-
-      <p style="margin-left: 50px">2. Measure beans on scale according to bean water ratio and grind beans in burr grinder. *(Remember to remove pre-heat water from vessels before adding coffee)</p>
-  </div>
-
-  <div style="height:100px; margin-top:20px">
-      <div style="float: left">
-        <%= image_tag "coffee-experiments-bloom-press.png",:width => "100px", :style=>"margin-left: 50px; margin-right: 30px"%>
-    </div>
-
-      <p style="margin-right: 50px">3. Tare press pot with beans on a scale. Pour enough water to cover all the beans, stir, and let bloom.</p>
-  </div>
-
-  <div style="height:100px; margin-top: 20px">
-      <div style="float: right">
-        <%= image_tag "coffee-experiments-immersion-press.png",:width => "100px", :style=>"margin-left: 35px; margin-right: 50px"%>
-    </div>
-
-      <p style="margin-left: 50px">4. Using the scale to measure, pour the remaing water ratio into the press pot and replace lid with plunger, but do not plunge.</p>
-  </div>
-
-  <div style="height:100px; margin-top:20px">
-      <div style="float: left">
-        <%= image_tag "coffee-experiments-plunge-press.png",:width => "100px", :style=>"margin-left: 50px; margin-right: 30px"%>
-    </div>
-
-      <p style="margin-right: 50px">5. After immersion time is finished, with control gently press down on plunger over 10-20 sec.</p>
-  </div>
-
-  <div style="height:100px; margin-top:20px">
-      <div style="float: right">
-        <%= image_tag "coffee-experiments-decant-press.png",:width => "100px", :style=>"margin-left: 35px; margin-right: 50px"%>
-    </div>
-
-      <p style="margin-left: 50px">6. Dispose of pre-heat water and decant brew from press pot into warmed vessel.</p>
-  </div>
-</div>
 
